# C-Final-Project

./: CMakeLists.txt  CmakeLists.txt  README.md  environment.yml  main.c
data/: door.csv  humidity.csv  light.csv  motion.csv  temperature.csv
include/: common.h  core.h  device.h  graph.h  hub.h  log.h  menu.h  plot.h  query.h  queue.h
include/sensors/: door.h  humidity.h  light_sensor.h  motion.h  temperature.h
include/utils/: csv_reader.h  logger.h  random_gen.h
src/: core.c  graph.c  main.c  menu.c
src/sensors/: door.c  humidity.c  light_sensor.c  motion.c  temperature.c
src/utils/: csv_reader.c  logger.c  random_gen.c
